# elmer_circuitbuilder

./: .gitignore  output_file.definitions  pyproject.toml  setup.cfg  test_all.sh
docs/: conf.py
elmer_circuitbuilder/: test_elmercomponent.py
src/elmer_circuitbuilder/: __init__.py  _version.py  core.py  init.py
tests/: circuit.definition  test_elmer_circuitbuilder.py  test_elmercomponent.py  test_stepwise_resistor.py  test_string_matrix.py
