[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "elmer_circuitbuilder"
# version provided dynamically by poetry-dynamic-versioning
dynamic = ["version"]
description = "Python module for creating circuit simulation definitions for Elmer FEM."
readme = "README.rst"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Jonathan Velasco", email = "velasco_jonathan@hotmail.com" }]
requires-python = ">=3.11,<4"
dependencies = [
  # runtime deps (keep exact numpy pin only if you need it for regression testing)
  "numpy (>=2.3.3,<3.0.0)"
]


[project.urls]
Homepage = "https://github.com/ElmerCSC/elmer_circuitbuilder"
Repository = "https://github.com/ElmerCSC/elmer_circuitbuilder"

[tool.poetry]
# Poetry-only settings (non-PEP metadata): package discovery from src/
packages = [{ include = "elmer_circuitbuilder", from = "src" }]

# Keep Poetry dev/test groups here so `poetry install --with dev` installs them
version = "0.0.0" # Placeholder for poetry-dynamic-versioning
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^25.9.0"
coverage = "^7.10.7"
pytest-cov = "^7.0.0"

[tool.poetry.group.test.dependencies]
mock = "^5.1.0"
teamcity-messages = "^1.32"

[tool.coverage.run]
command_line = "-m pytest"
source = ["elmer_circuitbuilder"]


[tool.coverage.report]
include = ["src/elmer_circuitbuilder/*.py"]
show_missing = true


# Enable poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = true
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""


[tool.poetry-dynamic-versioning.files.".build_id"]
persistent-substitution = true
initial-content-jinja = """##teamcity[buildNumber '{%- if distance == 0 -%}{{- base -}}{%- else -%}{{- base }}.dev{{ distance }}+g{{commit}}{%- endif -%}']"""

[tool.poetry-dynamic-versioning.files."src/elmer_circuitbuilder/_version.py"]
persistent-substitution = true
initial-content-jinja = """
# This file is generated by poetry-dynamic-versioning. Do not edit by hand.
__version__ = "{%- if distance == 0 -%}{{- base -}}{%- else -%}{{- base }}.dev{{ distance }}+g{{commit}}{%- endif -%}"
"""